--- a/generator/resources/ruby/gemspec.mustache
+++ b/generator/resources/ruby/gemspec.mustache
@@ -24,9 +24,9 @@ Gem::Specification.new do |s|
   {{/gemLicense}}
 
   s.metadata['homepage_uri'] = s.homepage
-  s.metadata['source_code_uri'] = {{{gemMetadataSourceCodeUri}}}
-  s.metadata['changelog_uri'] = {{{gemMetadataChangelogUri}}}
-  s.metadata['bug_tracker_uri'] = {{{gemMetadataBugTrackerUri}}}
+  s.metadata['source_code_uri'] = "{{{gemMetadataSourceCodeUri}}}"
+  s.metadata['changelog_uri'] = "{{{gemMetadataChangelogUri}}}"
+  s.metadata['bug_tracker_uri'] = "{{{gemMetadataBugTrackerUri}}}"
 
   s.required_ruby_version = "{{{gemRequiredRubyVersion}}}{{^gemRequiredRubyVersion}}>= 1.9{{/gemRequiredRubyVersion}}"
 
